--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -18,55 +18,70 @@ Header:
       line-height: 1.42857143;
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     }
+    button {
+      background: none;
+      border: none;
+      color: $tuna;
+      position: absolute;
+      right: 20px;
+      line-height: 47px;
+      font-size: 20px;
+      outline: none;
+    }
+    .icon-search:before {
+      font-family: icomoon !important;
+      position: relative;
+      content: "\e986";
+    }
   }
-}
 
-.logo {
-}
-
-.row {
-  display: flex;
-  gap: 20px;
-  justify-content: flex-start;
-  height: 70px;
-  align-items: center;
-  vertical-align: middle;
-}
-
-.logo {
-  img {
-    width: 100%;
+  .logo {
   }
-}
 
-.phone {
-  .icon-phone:before {
-    font-family: icomoon !important;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 400;
-    font-variant: normal;
-    text-transform: none;
-    content: "\e901";
+  .row {
+    display: flex;
+    gap: 20px;
+    justify-content: flex-start;
+    height: 70px;
+    align-items: center;
+    vertical-align: middle;
   }
-}
 
-.hamburger {
-  float: right;
-  button {
-    height: 56px;
-    padding: 5px 15px 5px 15px;
-    background-color: $tuna;
-    border-color: $tuna;
+  .logo {
+    img {
+      width: 100%;
+    }
   }
-  .icon-burger:before {
-    font-family: icomoon !important;
-    font-size: 2rem;
-    font-style: normal;
-    font-weight: 400;
-    font-variant: normal;
-    text-transform: none;
-    content: "\e913";
-    color: white;
+
+  .phone {
+    .icon-phone:before {
+      font-family: icomoon !important;
+      font-size: 32px;
+      font-style: normal;
+      font-weight: 400;
+      font-variant: normal;
+      text-transform: none;
+      content: "\e901";
+    }
+  }
+
+  .hamburger {
+    float: right;
+    button {
+      height: 56px;
+      padding: 5px 15px 5px 15px;
+      background-color: $tuna;
+      border-color: $tuna;
+    }
+    .icon-burger:before {
+      font-family: icomoon !important;
+      font-size: 2rem;
+      font-style: normal;
+      font-weight: 400;
+      font-variant: normal;
+      text-transform: none;
+      content: "\e913";
+      color: white;
+    }
   }
 }
